objects/Deal_Registration__c.object
<CustomObject>
    <description>Partner Deal Registration</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RelatedOpportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Deal Registration</relationshipLabel>
        <relationshipName>Deal_Registration</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Deal Registration</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Deal Registration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deal Registration</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>